[package]
name = "pairing"

# Remember to change version string in README.md.
version = "0.15.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/ebfull/pairing"
repository = "https://github.com/ebfull/pairing"
edition ="2018"

[dependencies]
byteorder = "1"
ff = { version = "^0.5.2", features = ["derive"] }
group = { version = "0.2.0" }
rand_core = "0.5"
lazy_static = "1.4.0"

[dev-dependencies]
rand_xorshift = "0.2"

[features]
unstable-features = ["expose-arith"]
expose-arith = []
bls12-fastsubgroupcheck = []
default = []

[badges]
maintenance = { status = "actively-developed" }
